# python_jd

./: README.md
aula_01/: comandos.py
cl_02/: exc.py
cl_03/: main.py
cl_04/: dct.py  doc.csv  fnc.py  lt_dc.py  rd_doc.py  tpht.py
cl_06/: pyproject.toml
projeto_django/: pyproject.toml
